compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__module_alias_used_as_a_name.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "\nimport one/two\n\npub fn main() {\n  two\n}\n"
---
error: Module name `two` used as a value
  ┌─ /src/one/two.gleam:5:3
  │
5 │   two
  │   ^^^

Module name used as a value
